--- a/about me.html
+++ b/about me.html
@@ -54,7 +54,7 @@
             <div class="col-4">
                 <img class="img3" src="/assets/uploads/images/about img 1.jpg" alt="">
             </div>
-            <div class="col-6">
+            <div class="col-6" id="me">
                 <div class="abt">
                     <h2>ABOUT ME </h2>
                     <h3> Web Developer </h3>
