--- a/contact.html
+++ b/contact.html
@@ -14,40 +14,46 @@
     <link rel="stylesheet" href="/assets/css/portfolio.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
 
-    <nav id="nav" class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <img class="logo ms-5" src="/assets/uploads/logos/2.jpeg" alt="">
-          <div class="collapse navbar-collapse" id="navbarNav">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <img class="logo ms-5" src="/assets/uploads/logos/2.jpeg" alt="">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-5" href="/about me.html">About</a>
-              <li class="nav-item">
-                <a class="nav-link ms-5" href="/study.html">Study</a>
-              </li>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-5" href="/projects.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-5" href="/skills.html">Skills</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-5" href="https://drive.google.com/file/d/1H_9bV5mdcdIa1GT5QvcGpNno4ZzPQ7fG/view?usp=sharing">Resume</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-5" href="/contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
+                <li class="nav-item">
+                  <a class="nav-link text-primary " aria-current="page" href="/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary ms-5" href="/about me.html">About</a>
+                <li class="nav-item">
+                  <a class="nav-link text-primary ms-5" href="/study.html">Study</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary ms-5" href="/projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary ms-5" href="/skills.html">Skills</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary ms-5" href="https://drive.google.com/file/d/1H_9bV5mdcdIa1GT5QvcGpNno4ZzPQ7fG/view?usp=sharing">Resume</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary ms-5" href="/contact.html">Contact</a>
+                </li>
+              </ul>
         </div>
-    </nav> 
+      </div>
+    </div>
+  </nav>
 
 
     <div class="container contactme ">
