--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     a:hover {
       background-color: rgb(12, 227, 94);
       border-radius: 50px;
+      text-align: center;
     }
   </style>
   <link rel="stylesheet" href="/assets/css/portfolio.css">
